# vLLM-Kunlun

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  build.sh  ci.yml  collect_env.py  log.txt  pyproject.toml  requirements.txt  setup.py  setup_env.sh  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: DCO_Check.yaml  _e2e_singlecard.yml  _e2e_test.yml  _pylint.yml  pr_e2e.yml  pylint-check.yml  run-e2e.yml  test.yaml  test.yml  ut.yml
community/: collect_github_data.py  readme.md
docs/: Dockerfile.xpu  Makefile  envs.py  requirements-docs.txt
docs/source/: conf.py  faqs.md  index.md  installation.md  quick_start.md
tests/: conftest.py
tests/ut/: test.py  test_eagle_cpp_ops.py  test_kunlun_platform.py  test_moe_bias_cpp_ops.py  test_platform_envs.py  test_v1_worker_utils.py  test_wrapper.py
vllm_kunlun/: __init__.py  attention_compat.py  collect_env.py  compat.py  compilation_attention_patch.py  hf_config_compat.py  vllm_utils_wrapper.py
vllm_kunlun/compilation/: wrapper.py
vllm_kunlun/config/: model.py
vllm_kunlun/csrc/: eagle_prepare_next_token_ids.cpp  moe_bias_fused.cpp  utils.cpp  xops.h
vllm_kunlun/distributed/: kunlun_communicator.py
vllm_kunlun/models/: __init__.py  config.py  deepseek_mtp.py  deepseek_v2.py  fused_moe_compat.py  gemma4.py  gemma4_mm.py  glm.py  glm4.py  glm4_moe.py  glm4_moe_lite.py  glm4_moe_lite_mtp.py  glm4_moe_mtp.py  gpt_oss.py  interfaces.py  intern_vit.py  internlm2.py  interns1.py  interns1_vit.py  internvl.py  qwen3_5.py  (+12 more)
(+218 files in other folders)
